Bug 81492 - FILESAVE [DOCX] Hyperlink text is getting lost after RT
Summary: FILESAVE [DOCX] Hyperlink text is getting lost after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-18 11:12 UTC by Vinaya Mandke
Modified: 2014-09-01 08:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Issue File (44.92 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-18 11:13 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-07-18 11:12:11 UTC
Steps to Reproduce:
1. Open file in LO
2. Save as docx in LO
3. Open the original file and the round-tripped file in MS Word 2010

Hyperlink is lost (visual disparity).

=================================================================================
Root Cause
>>> The fldData is getting added as instrText.
So in RT file the <w:instrText> has both the instrText and the fldData, from the 
original file. This causes the hyperlink visual loss in RT file.
=================================================================================
Comment 1 Vinaya Mandke 2014-07-18 11:13:19 UTC
Created attachment 103032 [details]
Issue File
Comment 2 Jorendc 2014-07-18 15:21:59 UTC
Synerzip -> NEW
Comment 3 Commit Notification 2014-08-01 08:29:13 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=981e2dcd44d3b33b5af791645f77b6c7f2da831c

FILESAVE [DOCX] Hyperlink text is getting lost after RT fdo#81492



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-09-01 08:30:01 UTC
Fix applied + Unit test -> RESOLVED FIXED