FILESAVE [DOCX] Hyperlink text is getting lost after RT fdo#81492

The fldData was getting added as instrText. It was handled as CT_Text and
hence appended to the fieldCommand in DomainMapper_Impl::AppendFieldCommand.
So in RT file the <w:instrText> has both the instrText and the fldData, from the
original file. This causes the hyperlink visual loss in RT file.

WordprocessingML Page# 5011  [ ISO/IEC 29500-1:2012 ]
WordprocessingML Page# 5552 [ ECMA-376 Part 1 ]
fldData has been removed. So ignore it while importing

Change-Id: Ic2c06f1eb66639d36f3a27ae79181cdbde21b43c